--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img style="width:25%;" src="CSS - My Site Images\unknown.png" alt="Anonymous">
       <h2>Hello</h2>
       <p class="p1s">
-        I am Aman Verma.I am a student of B Tech Electromics and Communication Engineering Branch. I am a programmer.
+        I am Aman Verma.I am a student of B. Tech Electronics and Communication Engineering Branch. I am a programmer.
       </p>
 
     </div>
